<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_detail_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_detail_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|end"
            android:hint="@string/string_name"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textview_detail_symbol"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:hint="@string/string_symbol"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_detail_LastPrice"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0sp"
                android:gravity="center|end"
                android:hint="@string/detail_lastPrice"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textview_detail_BuyPrice"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0sp"
                android:gravity="center|end"
                android:hint="@string/detail_buyPrice"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textview_detail_Percent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0sp"
                android:gravity="center|end"
                android:hint="@string/detail_percent"
                android:textSize="32sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_detail_LastPrice_value"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0sp"
                android:gravity="center"
                android:hint="@string/detail_lastPrice_value"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textview_detail_BuyPrice_value"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0sp"
                android:gravity="center"
                android:hint="@string/detail_buyPrice_value"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textview_detail_Percent_value"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0sp"
                android:gravity="center"
                android:hint="@string/detail_percent_value"
                android:textSize="32sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_detail_Amount_Input"
            android:layout_width="0sp"
            android:layout_weight="0.9"
            android:layout_height="match_parent"
            android:gravity="center|end"
            android:hint="@string/detail_Amount"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/editText_detail_Amount_Input_value"
            android:layout_width="0sp"
            android:layout_weight="0.75"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/detail_Amount_value"
            android:cursorVisible="false"
            android:enabled="true"
            android:inputType="number"
            android:backgroundTint="@null"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/button_add_amount"
            style="@android:style/Widget.Material.Light.ImageButton"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:focusable="false"
            android:layout_gravity="center|end"
            android:src="@android:drawable/ic_menu_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_detail_Money"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/detail_Money"
            android:textSize="32sp" />
    </LinearLayout>

</LinearLayout>
